@@ -1,4 +1,6 @@
 
+	* bin/cygport.in (__prepman): Relocate /usr/man directory if present.
+
 	* lib/php.cygclass: Fix DESCRIPTION.
 
 	* lib/gst-plugins0.10.cygclass: Update plugin list for base 0.10.19,
